--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* scrollbar styling */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  /*@apply bg-primary-200;*/
+  background: #e0e0e2;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /*@apply bg-primary-300;*/
+  background: #c7c7cc;
+}
